.k8s/overlays/dns_prod/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: genzen
  annotations:
    description: "Genzen Application"
  labels:
    istio-injection: enabled
