.k8s/overlays/dns_prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: genzen
spec:
  template:
    spec:
      serviceAccountName: default-genzen
      containers:
        - name: genzen-backend
