.k8s/overlays/dns_prod/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-external-access
  namespace: genzen
spec:
  hosts:
    - "genzen.info"
  gateways:
    - istio-system/frontend-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend-service
            port:
              number: 3000
